[package]
name = "sc-block-builder"
version = "0.21.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", features = [
	"derive",
] }
sc-client-api = { version = "16.0.0", path = "../api" }
sp-api = { version = "14.0.0", path = "../../primitives/api" }
sp-block-builder = { version = "14.0.0", path = "../../primitives/block-builder" }
sp-blockchain = { version = "16.0.0", path = "../../primitives/blockchain" }
sp-core = { version = "16.0.0", path = "../../primitives/core" }
sp-inherents = { version = "14.0.0", path = "../../primitives/inherents" }
sp-runtime = { version = "18.0.0", path = "../../primitives/runtime" }
sp-state-machine = { version = "0.22.0", path = "../../primitives/state-machine" }

[dev-dependencies]
substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }
