[package]
name = "mmr-gadget"
version = "17.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/substrate"
description = "MMR Client gadget for substrate"
homepage = "https://substrate.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3"
log = "0.4"
beefy-primitives = { version = "14.0.0", path = "../../primitives/beefy", package = "sp-beefy" }
sc-client-api = { version = "16.0.0", path = "../api" }
sp-api = { version = "14.0.0", path = "../../primitives/api" }
sp-blockchain = { version = "16.0.0", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.20.0", path = "../../primitives/consensus/common" }
sp-core = { version = "16.0.0", path = "../../primitives/core" }
sp-mmr-primitives = { version = "14.0.0", path = "../../primitives/merkle-mountain-range" }
sc-offchain = { version = "17.0.0", path = "../offchain" }
sp-runtime = { version = "18.0.0", path = "../../primitives/runtime" }

[dev-dependencies]
parking_lot = "0.12.1"
sc-block-builder = { version = "0.21.0", path = "../block-builder" }
sp-tracing = { version = "8.0.0", path = "../../primitives/tracing" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
tokio = "1.17.0"
