[package]
description = "Substrate offchain workers"
name = "sc-offchain"
version = "17.0.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "4.1"
bytes = "1.1"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
fnv = "1.0.6"
futures = "0.3.21"
futures-timer = "3.0.2"
hyper = { version = "0.14.16", features = ["stream", "http2"] }
hyper-rustls = { version = "0.23.0", features = ["http2"] }
libp2p = "0.50.0"
num_cpus = "1.13"
once_cell = "1.8"
parking_lot = "0.12.1"
rand = "0.8.5"
threadpool = "1.7"
tracing = "0.1.29"
sc-client-api = { version = "16.0.0", path = "../api" }
sc-network-common = { version = "0.21.0", path = "../network/common" }
sc-peerset = { version = "6.0.0", path = "../peerset" }
sc-utils = { version = "5.0.0", path = "../utils" }
sp-api = { version = "14.0.0", path = "../../primitives/api" }
sp-core = { version = "16.0.0", path = "../../primitives/core" }
sp-offchain = { version = "14.0.0", path = "../../primitives/offchain" }
sp-runtime = { version = "18.0.0", path = "../../primitives/runtime" }

[dev-dependencies]
lazy_static = "1.4.0"
tokio = "1.22.0"
sc-block-builder = { version = "0.21.0", path = "../block-builder" }
sc-client-db = { version = "0.23.0", default-features = true, path = "../db" }
sc-transaction-pool = { version = "16.0.0", path = "../transaction-pool" }
sc-transaction-pool-api = { version = "16.0.0", path = "../transaction-pool/api" }
sp-consensus = { version = "0.20.0", path = "../../primitives/consensus/common" }
sp-tracing = { version = "8.0.0", path = "../../primitives/tracing" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }

[features]
default = []
