[package]
name = "sc-rpc-api"
version = "0.21.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0"
sc-chain-spec = { version = "15.0.0", path = "../chain-spec" }
sc-transaction-pool-api = { version = "16.0.0", path = "../transaction-pool/api" }
sp-core = { version = "16.0.0", path = "../../primitives/core" }
sp-rpc = { version = "15.0.0", path = "../../primitives/rpc" }
sp-runtime = { version = "18.0.0", path = "../../primitives/runtime" }
sp-version = { version = "16.0.0", path = "../../primitives/version" }
jsonrpsee = { version = "0.16.2", features = ["server", "client-core", "macros"] }
