[package]
name = "sc-rpc"
version = "17.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate Client RPC"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3.21"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
parking_lot = "0.12.1"
serde_json = "1.0.85"
sc-block-builder = { version = "0.21.0", path = "../block-builder" }
sc-chain-spec = { version = "15.0.0", path = "../chain-spec" }
sc-client-api = { version = "16.0.0", path = "../api" }
sc-rpc-api = { version = "0.21.0", path = "../rpc-api" }
sc-tracing = { version = "16.0.0", path = "../tracing" }
sc-transaction-pool-api = { version = "16.0.0", path = "../transaction-pool/api" }
sc-utils = { version = "5.0.0", path = "../utils" }
sp-api = { version = "14.0.0", path = "../../primitives/api" }
sp-blockchain = { version = "16.0.0", path = "../../primitives/blockchain" }
sp-core = { version = "16.0.0", path = "../../primitives/core" }
sp-keystore = { version = "0.22.0", path = "../../primitives/keystore" }
sp-offchain = { version = "14.0.0", path = "../../primitives/offchain" }
sp-rpc = { version = "15.0.0", path = "../../primitives/rpc" }
sp-runtime = { version = "18.0.0", path = "../../primitives/runtime" }
sp-session = { version = "15.0.0", path = "../../primitives/session" }
sp-version = { version = "16.0.0", path = "../../primitives/version" }

tokio = "1.22.0"

[dev-dependencies]
env_logger = "0.9"
assert_matches = "1.3.0"
sc-block-builder = { version = "0.21.0", path = "../block-builder" }
sc-network = { version = "0.22.0", path = "../network" }
sc-network-common = { version = "0.21.0", path = "../network/common" }
sc-transaction-pool = { version = "16.0.0", path = "../transaction-pool" }
sp-consensus = { version = "0.20.0", path = "../../primitives/consensus/common" }
tokio = "1.22.0"
sp-io = { version = "17.0.0", path = "../../primitives/io" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }

[features]
test-helpers = []
