[package]
name = "pallet-aura"
version = "15.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME AURA consensus pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { version = "16.0.0", default-features = false, path = "../support" }
frame-system = { version = "16.0.0", default-features = false, path = "../system" }
pallet-timestamp = { version = "15.0.0", default-features = false, path = "../timestamp" }
sp-application-crypto = { version = "17.0.0", default-features = false, path = "../../primitives/application-crypto" }
sp-consensus-aura = { version = "0.20.0", default-features = false, path = "../../primitives/consensus/aura" }
sp-runtime = { version = "18.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
sp-core = { version = "16.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "17.0.0", path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-consensus-aura/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
