[package]
name = "frame-benchmarking"
version = "16.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Macro for benchmarking a FRAME runtime."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
linregress = { version = "0.5.1", optional = true }
log = { version = "0.4.17", default-features = false }
paste = "1.0"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
frame-support = { version = "16.0.0", default-features = false, path = "../support" }
frame-support-procedural = { version = "11.0.0", default-features = false, path = "../support/procedural" }
frame-system = { version = "16.0.0", default-features = false, path = "../system" }
sp-api = { version = "14.0.0", default-features = false, path = "../../primitives/api" }
sp-application-crypto = { version = "17.0.0", default-features = false, path = "../../primitives/application-crypto" }
sp-core = { version = "16.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "17.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "18.0.0", default-features = false, path = "../../primitives/runtime" }
sp-runtime-interface = { version = "13.0.0", default-features = false, path = "../../primitives/runtime-interface" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }
sp-storage = { version = "11.0.0", default-features = false, path = "../../primitives/storage" }
static_assertions = "1.1.0"

[dev-dependencies]
array-bytes = "4.1"
rusty-fork = { version = "0.3.0", default-features = false }
sp-keystore = { version = "0.22.0", path = "../../primitives/keystore" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"linregress",
	"log/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-storage/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
