[package]
name = "pallet-contracts"
version = "15.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.3"
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
wasm-instrument = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", default-features = false, features = [
	"const_generics",
] }
wasmi = { version = "0.20", default-features = false }
wasmparser = { package = "wasmparser-nostd", version = "0.91", default-features = false }
impl-trait-for-tuples = "0.2"

# Only used in benchmarking to generate random contract code
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
frame-benchmarking = { version = "16.0.0", default-features = false, path = "../benchmarking", optional = true }
frame-support = { version = "16.0.0", default-features = false, path = "../support" }
frame-system = { version = "16.0.0", default-features = false, path = "../system" }
pallet-contracts-primitives = { version = "18.0.0", default-features = false, path = "primitives" }
pallet-contracts-proc-macro = { version = "8.0.0", path = "proc-macro" }
sp-api = { version = "14.0.0", default-features = false, path = "../../primitives/api" }
sp-core = { version = "16.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "17.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "18.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
array-bytes = "4.1"
assert_matches = "1"
env_logger = "0.9"
pretty_assertions = "1"
wat = "1"

# Substrate Dependencies
pallet-balances = { version = "16.0.0", path = "../balances" }
pallet-timestamp = { version = "15.0.0", path = "../timestamp" }
pallet-insecure-randomness-collective-flip = { version = "4.0.0", path = "../insecure-randomness-collective-flip" }
pallet-utility = { version = "16.0.0", path = "../utility" }
sp-keystore = { version = "0.22.0", path = "../../primitives/keystore" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"wasm-instrument/std",
	"wasmi/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
	"log/std",
	"rand/std",
	"wasmparser/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"rand",
	"rand_pcg",
]
try-runtime = ["frame-support/try-runtime"]
