[package]
name = "pallet-scheduler"
version = "17.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "16.0.0", default-features = false, optional = true, path = "../benchmarking" }
frame-support = { version = "16.0.0", default-features = false, path = "../support" }
frame-system = { version = "16.0.0", default-features = false, path = "../system" }
sp-io = { version = "17.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "18.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }
sp-weights = { version = "14.0.0", default-features = false, path = "../../primitives/weights" }

[dev-dependencies]
pallet-preimage = { version = "16.0.0", path = "../preimage" }
sp-core = { version = "16.0.0", default-features = false, path = "../../primitives/core" }
substrate-test-utils = { version = "4.0.0-dev", path = "../../test-utils" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
]
try-runtime = ["frame-support/try-runtime"]
