[package]
name = "sc-consensus-pow"
version = "0.21.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "PoW consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
futures = "0.3.21"
futures-timer = "3.0.1"
log = "0.4.17"
parking_lot = "0.12.1"
thiserror = "1.0"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../../utils/prometheus" }
sc-client-api = { version = "16.0.0", path = "../../api" }
sc-consensus = { version = "0.21.0", path = "../../../client/consensus/common" }
sp-api = { version = "14.0.0", path = "../../../primitives/api" }
sp-block-builder = { version = "14.0.0", path = "../../../primitives/block-builder" }
sp-blockchain = { version = "16.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.20.0", path = "../../../primitives/consensus/common" }
sp-consensus-pow = { version = "0.20.0", path = "../../../primitives/consensus/pow" }
sp-core = { version = "16.0.0", path = "../../../primitives/core" }
sp-inherents = { version = "14.0.0", path = "../../../primitives/inherents" }
sp-runtime = { version = "18.0.0", path = "../../../primitives/runtime" }
