[package]
name = "pallet-nomination-pools-test-staking"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME nomination pools pallet tests with the staking pallet"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
scale-info = { version = "2.0.1", features = ["derive"] }

sp-runtime = { version = "18.0.0", path = "../../../primitives/runtime" }
sp-io = { version = "17.0.0", path = "../../../primitives/io" }
sp-std = { version = "6.0.0", path = "../../../primitives/std" }
sp-staking = { version = "14.0.0", path = "../../../primitives/staking" }
sp-core = { version = "16.0.0", path = "../../../primitives/core" }

frame-system = { version = "16.0.0", path = "../../system" }
frame-support = { version = "16.0.0", path = "../../support" }
frame-election-provider-support = { version = "16.0.0", path = "../../election-provider-support" }

pallet-timestamp = { version = "15.0.0", path = "../../timestamp" }
pallet-balances = { version = "16.0.0", path = "../../balances" }
pallet-staking = { version = "16.0.0", path = "../../staking" }
pallet-bags-list = { version = "15.0.0", path = "../../bags-list" }
pallet-staking-reward-curve = { version = "4.0.0", path = "../../staking/reward-curve" }
pallet-nomination-pools = { version = "13.0.0", path = ".." }

sp-tracing = { version = "8.0.0", path = "../../../primitives/tracing" }
log = { version = "0.4.0" }
