[package]
name = "sp-application-crypto-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Integration tests for application-crypto"
license = "Apache-2.0"
publish = false
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "14.0.0", path = "../../api" }
sp-application-crypto = { version = "17.0.0", path = "../" }
sp-core = { version = "16.0.0", default-features = false, path = "../../core" }
sp-keystore = { version = "0.22.0", default-features = false, path = "../../keystore" }
sp-runtime = { version = "18.0.0", path = "../../runtime" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
