[package]
name = "sp-consensus-pow"
version = "0.20.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Aura consensus"
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
sp-api = { version = "14.0.0", default-features = false, path = "../../api" }
sp-core = { version = "16.0.0", default-features = false, path = "../../core" }
sp-runtime = { version = "18.0.0", default-features = false, path = "../../runtime" }
sp-std = { version = "6.0.0", default-features = false, path = "../../std" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
