[package]
description = "Substrate mixnet externalities extension"
name = "sp-mixnet-externalities-ext"
version = "0.1.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-externalities = { version = "0.12.0", default-features = false, path = "../../externalities" }
sp-mixnet-types = { version = "0.1.0-dev", default-features = false, path = "../types" }

[features]
default = ["std"]
std = [
    "sp-externalities/std",
    "sp-mixnet-types/std",
]
