[package]
description = "Substrate mixnet runtime API"
name = "sp-mixnet-runtime-api"
version = "0.1.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../api" }
sp-application-crypto = { version = "7.0.0", default-features = false, path = "../../application-crypto" }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, path = "../../authority-discovery" }
sp-mixnet-types = { version = "0.1.0-dev", default-features = false, path = "../types" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "../../session" }
sp-std = { version = "5.0.0", default-features = false, path = "../../std" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-authority-discovery/std",
    "sp-mixnet-types/std",
    "sp-session/std",
	"sp-std/std",
]
