[package]
description = "Common types for Substrate mixnet"
name = "sp-mixnet-types"
version = "0.1.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
serde = { version = "1.0.136", optional = true }
sp-std = { version = "4.0.0", default-features = false, path = "../../std" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "sp-std/std",
]
