[package]
name = "substrate-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3.21"
sc-block-builder = { version = "0.21.0", path = "../../../client/block-builder" }
sc-client-api = { version = "16.0.0", path = "../../../client/api" }
sc-consensus = { version = "0.21.0", path = "../../../client/consensus/common" }
sp-api = { version = "14.0.0", path = "../../../primitives/api" }
sp-blockchain = { version = "16.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.20.0", path = "../../../primitives/consensus/common" }
sp-core = { version = "16.0.0", path = "../../../primitives/core" }
sp-runtime = { version = "18.0.0", path = "../../../primitives/runtime" }
substrate-test-client = { version = "2.0.0", path = "../../client" }
substrate-test-runtime = { version = "2.0.0", path = "../../runtime" }
