[package]
name = "try-runtime-cli"
version = "0.26.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Cli command runtime testing and dry-running"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
remote-externalities = { version = "0.23.0", path = "../../remote-externalities", package = "frame-remote-externalities" }
sc-cli = { version = "0.24.0", path = "../../../../client/cli" }
sc-executor = { version = "0.20.0", path = "../../../../client/executor" }
sc-service = { version = "0.23.0", default-features = false, path = "../../../../client/service" }
sp-core = { version = "16.0.0", path = "../../../../primitives/core" }
sp-externalities = { version = "0.17.0", path = "../../../../primitives/externalities" }
sp-io = { version = "17.0.0", path = "../../../../primitives/io" }
sp-keystore = { version = "0.22.0", path = "../../../../primitives/keystore" }
sp-runtime = { version = "18.0.0", path = "../../../../primitives/runtime" }
sp-rpc = { version = "15.0.0", path = "../../../../primitives/rpc" }
sp-state-machine = { version = "0.22.0", path = "../../../../primitives/state-machine" }
sp-version = { version = "16.0.0", path = "../../../../primitives/version" }
sp-debug-derive = { path = "../../../../primitives/debug-derive" , version = "6.0.0" }
sp-api = { path = "../../../../primitives/api" , version = "14.0.0" }
sp-weights = { version = "14.0.0", path = "../../../../primitives/weights" }
frame-try-runtime = { optional = true, path = "../../../../frame/try-runtime" , version = "0.22.0" }
substrate-rpc-client = { path = "../../rpc/client" , version = "0.21.0" }

clap = { version = "4.0.9", features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
log = "0.4.17"
parity-scale-codec = "3.2.2"
serde = "1.0.136"
serde_json = "1.0.85"
zstd = { version = "0.11.2", default-features = false }

[dev-dependencies]
tokio = "1.22.0"

[features]
try-runtime = [
	"sp-debug-derive/force-debug",
	"frame-try-runtime/try-runtime",
]
